--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
-  <head>
-    <h1>
-      Hello World!
-    </h1>
-  </head>
+
+<head>
+  <h1>
+    Hello World!
+  </h1>
+</head>
+
+<body>
+  <h2>Git & Github session</h2>
+</body>
+
 </html>
